2008-01-29  Tim Retout  <diocles@gnu.org>

	* Makefile.am (install-data-local): Use $(DESTDIR) in local
	installation paths, to fix `make distcheck'.
	(uninstall-local): Likewise.

2008-01-01  Tim Retout  <diocles@gnu.org>

	* ChangeLog: Add copyright notice at end.

	* c_ppline.st (c_ppline_comment): New state.
	(c_ppline, c_ppline_comments_strings_chars, c_ppline_tokensequence):
	Call c_ppline_comment rather than c_comment.
	(c_ppline, c_ppline_include, c_ppline_define)
	(c_ppline_comments_strings_chars, c_ppline_tokensequence): Treat
	backslash-escaped newlines as continuing the preprocessor line.

	* c_ppline.st (c_ppline): Move dependency on C rules to top of file,
	to fix use of CHighlight.

	* bash.st (bash): Fix highlighting of escaped quote marks.
	* csh.st (csh): Likewise.  
	* ksh.st (ksh): Likewise.
	* sh.st (sh): Likewise.
	* tcsh.st (tcsh): Likewise.
	* zsh.st (zsh): Likewise.
	Incorporates and extends original patch for ksh.st and sh.st by
	Shawn McMahon <smcmahon@eiv.com>.

2003-02-27  Markku Rossi  <mtr@amme.hel.fi.ssh.com>

	* pyrex.st: Highlighting rules for the Pyrex language (Pyrex - a
	Language for Writing Python Extension Modules).

2000-06-07  Markku Rossi  <mtr@amme.hel.fi.ssh.com>

	* rfc.st (rfc): Fixed to highlight the RFC keywords, described by
	the RFC 2119.

	* enscript.st (highlight_face): New face `highlight' to highlight
	text some way.

2000-04-19  Markku Rossi  <mtr@amme.hel.fi.ssh.com>

	* rfc.st: Fixed to recognize also the `[page nn]' page number.

1999-11-20  Markku Rossi  <mtr@amme.ssh.fi>

	* wmlscript.st: Highlighting rules for WMLScript.

1999-09-24  Markku Rossi  <mtr@amme.ssh.fi>

	* fortran.st (fortran_io): Fixed a typo from the debugging
	messages which halted the fortran_io processing.

1999-09-07  Markku Rossi  <mtr@amme.ssh.fi>

	* describe_languages.st (describe_languages_html): Cleaned up the
	HTML output.

	* diffs.st: Highlighting rules for side diff files.  Thanks to
	Tobias Buchal.
